2008-04-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api: Make debug dump output consistent to other
	tools w/ hostname prefix on lan debug output.

	* ipmipower/, ipmiconsole/: Revert change with no-prefix when
	doing lan debug output to only one host.

	* libfreeipmi/include/freeipmi/sdr-cache/ipmi-sdr-cache.h,
	libfreeipmi/src/sdr-cache/ipmi-sdr-cache.c
	(ipmi_sdr_cache_ctx_get_debug_prefix,
	ipmi_sdr_cache_ctx_set_debug_prefix): New functions.

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-defs.h: Add
	debug_prefix into ctx.

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache.c: Init and cleanup
	debug_prefix appropriately.

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-create.c,
	libfreeipmi/src/sdr-cache/ipmi-sdr-cache-read.c: Use new debug
	prefix in debug outputs.

	* ipmimonitoring/, ipmi-sensors/, ipmi-sel/, ipmi-fru/,
	ipmi-sensors-config/: Set debug prefix appropriately.

	* common/src/ipmi-ping.h, common/src/ipmi-ping.c: Pass destination
	to create and parse functions.

	* ipmiping/, rmcpping/: Prefix debug output appropriately.

	* common/src/debug-common.h, common/src/debug-common.c: New files.

	* ipmipower/, ipmiping/, rmcpping/, bmc-watchdog/, ipmiconsole/,
	libfreeipmi/: Use debug common functions to generate consistent
	headers for all tools.

	* ipmipower/: Convert all err_* calls to ierr_* calls.

	* ipmiping/ipmiping.8.pre.in: Clarify ipmi version option.

	* ipmiconsole/: Various cleanup.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.h
	(ipmiconsole_ctx_connection_cleanup): Rename to
	__ipmiconsole_ctx_connection_cleanup.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.h
	(ipmiconsole_ctx_connection_cleanup_session_submitted,
	ipmiconsole_ctx_connection_cleanup_session_not_submitted): New
	functions.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c: Update
	appropriately for function name changes.
